[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/ju-872.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/Enemy.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]

[node name="Enemy" type="Spatial"]
transform = Transform( -0.24342, 0, -3.67555e-08, 0, 0.24342, 0, 3.67555e-08, 0, -0.24342, 0, 0, 0 )
script = ExtResource( 2 )
SPEED = 15.0

[node name="ju-87" parent="." instance=ExtResource( 1 )]

[node name="EnemyArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="EnemyArea"]
transform = Transform( 14.1456, 0, 2.04636e-12, 0, 2.5995, 0, -1.13687e-12, 0, 21.2417, 1.42109e-14, 0, 0.709267 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="area_entered" from="EnemyArea" to="." method="_on_EnemyArea_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
